# llm-sandbox

./: .envrc  .gitignore  LICENSE  Makefile  flake.nix  pyproject.toml
.devcontainer/: Dockerfile  args.json
llm/: 1_getting_started.ipynb  1_getting_started.py
