[tool.poetry]
name = "llm-sandbox"
version = "0.1.0"
description = "A simple LLM Sandbox Python environment"
authors = ["Rizky Maulana Nugraha <lana.pcfre@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.35.10"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
